added bid controller and model
